welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:29: error: overriding method run in class SimpleBuggle of type ()Unit;
 method run needs `override' modifier
def run() {
    ^